# math

./: .gitignore  Justfile  custom_config.yml  flake.nix  manim.cfg  pyproject.toml
custom/: complex.py  portrait.py  shader_obj.py  typings.py
holomorphic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
projects/gl/: SplineGL.py  custom_config.yml
projects/mat557/eigen/: Eigen.py
projects/mat557/fourier/: playground.py
projects/mat557/interp/: Justfile  Spline.py  custom_config.yml  interpolation.py
projects/mat557/interp_quat/: Justfile  SplineGL.py
projects/mat557/oilers/: .gitignore  .manim-slides.toml  Justfile  OilersMethod.py  Slides.py  _01IntroToNewtonsMethod.py  __init__.py  common.py  custom_config.yml  fractal.py  methods.py  playground.py  script.md  shader_obj.py  symbols.py
projects/mat557/oilers/doc/: script.md
projects/mat557/oilers/image/: analysi_newton
projects/mat557/oilers/newton/: frag.glsl  vert.glsl
projects/mat557/oilers/shaders/: example.slang  newton.slang
projects/mat557/oilers/shaders/newton/: vert.glsl
scenes/: Spline.py  Title.py
