[project]
name = "holomorphic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dearpygui>=2.2",
    "ipython>=9.10.0",
    "manim-slides[manimgl,pyside6-full]>=5.5.4",
    "manimgl>=1.7.2",
    "pyquaternion>=0.9.9",
    "setuptools>=80.0.0",
]

[tool.uv]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportGeneralTypeIssues = "warning"
reportOptionalMemberAccess = "warning"
reportArgumentType = "warning"
reportOperatorIssue = "warning"

[tool.ruff.lint]
exclude = []
extend-ignore = ["F401", "F403", "F405"]

[tool.uv.workspace]
members = [
    "custom/custom",
]
