[project]
name = "holomorphic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13"
dependencies = [
    # "dearpygui>=2.2",
    "ipython>=9.10.0",
    # "manim-slides[manimgl,pyside6,magic]>=5.6.0",
    "manim-slides[manimgl,pyside6,magic]==5.5.4",
    "manimgl>=1.7.2",
    "pyquaternion>=0.9.9",
    "setuptools>=80.0.0",
    "slangpy>=0.40.1",
    "sympy>=1.14.0",
]

[tool.setuptools]
py-modules = [ "custom", "projects" ]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportGeneralTypeIssues = "warning"
reportOptionalMemberAccess = "warning"
reportArgumentType = "warning"
reportOperatorIssue = "warning"

[tool.ruff.lint]
exclude = []
extend-ignore = ["F401", "F403", "F405"]

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "custom/custom",
]
